==> apache/nuttx/arch/arm/src/gd32f4/gd32f4xx_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/mutex.h>
#include <nuttx/semaphore.h>
#include <nuttx/spi/spi.h>
#include <arch/irq.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "chip.h"
#include "gd32f4xx.h"
#include "gd32f4xx_spi.h"
#define GD32_SPI_CLK_MAX       (30000000ul)
#define GD32_SPI_CLK_INIT      (400000)
#define SPI_INIT_MASK          ((uint32_t)0x00003040u)  /* SPI parameter initialization mask */
#  define SPI_DMA_PRIO  CONFIG_GD32F4_SPI_PRIQ
#  define SPI_DMA_PRIO  DMA_PRIO_MEDIUM_SELECT
#  define SPI_DMA_BUFFER_MASK      (4 - 1)
#  define SPI_DMA_BUFEER_ALIGN     aligned_data(4)
#    define SPI0_DMA_BUFSIZE_ADJ   ((CONFIG_GD32F4_SPI0_DMA_BUFFER + SPI_DMA_BUFFER_MASK) & \
                                    ~SPI_DMA_BUFFER_MASK)
#    define SPI1_DMA_BUFSIZE_ADJ   ((CONFIG_GD32F4_SPI1_DMA_BUFFER + SPI_DMA_BUFFER_MASK) & \
                                    ~SPI_DMA_BUFFER_MASK)
#    define SPI2_DMA_BUFSIZE_ADJ   ((CONFIG_GD32F4_SPI2_DMA_BUFFER + SPI_DMA_BUFFER_MASK) & \
                                    ~SPI_DMA_BUFFER_MASK)
#    define SPI3_DMA_BUFSIZE_ADJ   ((CONFIG_GD32F4_SPI3_DMA_BUFFER + SPI_DMA_BUFFER_MASK) & \
                                    ~SPI_DMA_BUFFER_MASK)

static int spi_lock(struct spi_dev_s *dev, bool lock)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;
  int ret;

  if (lock)
    {
      ret = nxmutex_lock(&priv->lock);
    }
  else
    {
      ret = nxmutex_unlock(&priv->lock);
    }

  return ret;
}

static uint32_t spi_setfrequency(struct spi_dev_s *dev,
                                 uint32_t frequency)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;

  uint16_t setbits;
  uint32_t actual;
  uint32_t plk_div;

  /* Check if the requested frequence is the same as the frequency
   * selection.
   */

  if (priv->frequency == frequency)
    {
      /* We are already at this frequency.  Return the actual. */

      return priv->actual;
    }

  /* Check if requested frequency reasonable */

  if (frequency > GD32_SPI_CLK_MAX)
    {
      frequency = GD32_SPI_CLK_MAX;
    }
  else if (frequency == 0)
    {
      frequency = GD32_SPI_CLK_INIT;
    }

  /* Configure SCK frequency.
   *
   *   SCK frequency = PCLK / plk_div, or plk_div = PCLK / frequency
   */

  plk_div = priv->spiclock / frequency;

  if (plk_div < 2)
    {
      plk_div = 2;
    }
  else if (plk_div > 256)
    {
      plk_div = 256;
    }

  if (plk_div > 128)
    {
      setbits = SPI_CTL0_PSC_256;
    }
  else if (plk_div > 64)
    {
      setbits = SPI_CTL0_PSC_128;
    }
  else if (plk_div > 32)
    {
      setbits = SPI_CTL0_PSC_64;
    }
  else if (plk_div > 16)
    {
      setbits = SPI_CTL0_PSC_32;
    }
  else if (plk_div > 8)
    {
      setbits = SPI_CTL0_PSC_16;
    }
  else if (plk_div > 4)
    {
      setbits = SPI_CTL0_PSC_8;
    }
  else if (plk_div > 2)
    {
      setbits = SPI_CTL0_PSC_4;
    }
  else
    {
      setbits = SPI_CTL0_PSC_2;
    }

  spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
  spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, setbits, SPI_CTL0_PSC_MASK);
  spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

  actual = priv->spiclock >> ((setbits >> SPI_CTL0_PSC_SHIFT) + 1);

  /* Save the frequency selection so that subsequent reconfigurations
   * will be faster.
   */

  spiinfo("Frequency %" PRIu32 "->%" PRIu32 "\n", frequency, actual);

  priv->frequency = frequency;
  priv->actual    = actual;

  return priv->actual;
}

static void spi_setmode(struct spi_dev_s *dev, enum spi_mode_e mode)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;

  uint32_t regval0;
  uint32_t regval1;

  spiinfo("mode=%d\n", mode);

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      /* Yes... Set CTL0 appropriately */

      regval0 = spi_getreg(priv, GD32_SPI_CTL0_OFFSET);
      regval0 &= ~(SPI_CTL0_CKPH | SPI_CTL0_CKPL);
      regval1 = spi_getreg(priv, GD32_SPI_CTL1_OFFSET);
      regval1 &= ~ SPI_CTL1_TMOD;

      switch (mode)
        {
        case SPIDEV_MODE0: /* CKPL=0, CKPH=0 */
          break;

        case SPIDEV_MODE1: /* CKPL=0, CKPH=1 */
          regval0 |= SPI_CTL0_CKPH;
          break;

        case SPIDEV_MODE2: /* CKPL=1, CKPH=0 */
          regval0 |= SPI_CTL0_CKPL;
          break;

        case SPIDEV_MODE3: /* CKPL=1, CKPH=1 */
          regval0 |= (SPI_CTL0_CKPH | SPI_CTL0_CKPL);
          break;

#ifdef SPI_TMOD_EN    /* If MCU TI Synchronous Serial Frame Format enable */
        case SPIDEV_MODETI:
          regval0 = (SPI_CTL0_CKPH | SPI_CTL0_CKPL);
          regval1 | SPI_CTL1_TMOD;
          break;
#endif

        default:
          return;
        }

      spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
      spi_putreg(priv, GD32_SPI_CTL0_OFFSET, regval0);
      spi_putreg(priv, GD32_SPI_CTL1_OFFSET, regval1);
      spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

      /* Save the mode so that subsequent re-configurations will be
       * faster
       */

      priv->mode = mode;
    }
}

static void spi_setbits(struct spi_dev_s *dev, int nbits)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;

  uint32_t regval;

  spiinfo("nbits=%d\n", nbits);

  /* Has the number of bits changed? */

  if (nbits != priv->nbits)
    {
      /* Yes... Set the number of bits (16 or 8) */

      regval = spi_getreg(priv, GD32_SPI_CTL0_OFFSET);
      regval &= ~ SPI_CTL0_FF16;

      if (nbits == 16)
        {
          regval |= SPI_CTL0_FF16;
        }

      spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
      spi_putreg(priv, GD32_SPI_CTL0_OFFSET, regval);
      spi_modifyreg(priv, GD32_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

      /* Save the selection so that subsequent re-configurations will be
       * faster.
       */

      priv->nbits = nbits;
    }
}

static uint32_t spi_send(struct spi_dev_s *dev, uint32_t wd)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;

  return (uint32_t)spi_send_data(priv, (uint16_t)wd);
}
